[tool.poetry]
name = "probezilla"
version = "0.1.0"
description = "An AI agent to help you prepare for backend software engineering interviews"
authors = ["Xavier Araújo <xavier.araujo92@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11.6"
pylint = "3.3.4"
pre-commit = "4.1.0"
rich = "13.9.4"
annotated-types = "0.6.0"
anyio = "4.2.0"
blinker = "1.7.0"
certifi = "2024.2.2"
click = "8.1.7"
distro = "1.9.0"
Flask = "3.0.2"
h11 = "0.14.0"
httpcore = "1.0.2"
httpx = "0.26.0"
idna = "3.6"
itsdangerous = "2.1.2"
Jinja2 = "3.1.3"
MarkupSafe = "2.1.5"
openai = "1.11.1"
pydantic = "2.6.1"
pydantic-core = "2.16.2"
sniffio = "1.3.0"
tqdm = "4.66.1"
typing-extensions = "4.9.0"
Werkzeug = "3.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 420
target-version = ['py39']
include = '\.pyi?$'
